@@ -140,6 +140,11 @@ noConvergence :
         #include "waterMassBalance.H"
         if (steady)
         {
+            if (writeResiduals)
+            {
+                OFstream residualFile("residuals.csv", IOstreamOption(), true);
+                residualFile << runTime.timeName() << " " << mag(hEqnResidual) << endl;
+            }
             if (hEqnResidual < tolerancePicard) runTime.writeAndEnd();
         }
         else
